added nav links, updated with css

--- a/index.html
+++ b/index.html
@@ -4,26 +4,51 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>MY PORTFOLIO</title>
   </head>
   <body>
     <!----Header with navigation bar including my name---->
     <header>
-      <nav>
-        <ul></ul>
+      <nav class="nav-container">
+        <h1>QADIR KHAN</h1>
+        <div class="nav-link-container">
+          <div class="nav-link-item">
+            <a class="nav-link" href="#about">About Me</a>
+          </div>
+          <div class="nav-link-item">
+            <a class="nav-link" href="#projects">My Projects</a>
+          </div>
+          <div class="nav-link-item">
+            <a class="nav-link" href="#contact">Contact Me</a>
+          </div>
+        </div>
       </nav>
     </header>
-    <!----About me section-->
+    <!----About me section add image of yourself-->
     <section>
-      <h1></h1>
+      <h2>ABOUT ME</h2>
+      <img />
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod, incidunt
+        in nostrum repellendus eligendi, suscipit magni quidem inventore sunt
+        aperiam ipsa aspernatur ex velit totam aut molestiae hic facere ipsum!
+      </p>
     </section>
     <!----have first application here with image larger than rest----->
-    <section></section>
+    <section>
+      <h2>MY PROJECTS</h2>
+    </section>
     <!----link section with other images lined up should be placeholders about other 7 projects---->
 
     <section></section>
 
     <!----contact me footer-->
-    <footer class="">See where this ends</footer>
+    <footer class="">
+      <h3>CONTACT ME</h3>
+      <ul>
+        <!----have links here---->
+      </ul>
+    </footer>
   </body>
 </html>
