image added and contact section compelte

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!----Header with navigation bar including my name---->
     <header>
       <nav class="nav-container">
-        <h1>QADIR KHAN</h1>
+        <div><h1>QADIR KHAN</h1></div>
         <div class="nav-link-container">
           <div class="nav-link-item">
             <a class="nav-link" href="#about">About Me</a>
@@ -25,17 +25,21 @@
         </div>
       </nav>
     </header>
+
+    <hr />
     <!----About me section add image of yourself-->
     <section>
       <h2>ABOUT ME</h2>
-      <img />
+      <img src="./assets/images/portfolio-pic.jpg" width="20%" />
       <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod, incidunt
         in nostrum repellendus eligendi, suscipit magni quidem inventore sunt
         aperiam ipsa aspernatur ex velit totam aut molestiae hic facere ipsum!
       </p>
     </section>
-    <!----have first application here with image larger than rest----->
+
+    <hr />
+
     <section>
       <h2>MY PROJECTS</h2>
     </section>
@@ -43,12 +47,21 @@
 
     <section></section>
 
+    <hr />
+
     <!----contact me footer-->
-    <footer class="">
-      <h3>CONTACT ME</h3>
-      <ul>
-        <!----have links here---->
-      </ul>
+    <footer>
+      <h3 class="contact-me">CONTACT ME</h3>
+      <nav class="nav-container">
+        <div class="nav-link-container">
+          <div class="nav-link-item">
+            <a class="nav-link" href="#email">qkhn95@gmail.com</a>
+          </div>
+          <div class="nav-link-item">
+            <a class="nav-link" href="#number">07978129476</a>
+          </div>
+        </div>
+      </nav>
     </footer>
   </body>
 </html>
