--- a/index.html
+++ b/index.html
@@ -12,53 +12,103 @@
     <header>
       <nav class="nav-container">
         <div><h1>QADIR KHAN</h1></div>
-        <div class="nav-link-container">
-          <div class="nav-link-item">
-            <a class="nav-link" href="#about">About Me</a>
-          </div>
-          <div class="nav-link-item">
-            <a class="nav-link" href="#projects">My Projects</a>
-          </div>
-          <div class="nav-link-item">
-            <a class="nav-link" href="#contact">Contact Me</a>
-          </div>
+        <div class="nav-link-container"></div>
+        <div class="nav-link-item">
+          <a class="nav-link" href="#about">About Me</a>
+        </div>
+        <div class="nav-link-item">
+          <a class="nav-link" href="#projects">My Projects</a>
+        </div>
+        <div class="nav-link-item">
+          <a class="nav-link" href="#contact">Contact Me</a>
+        </div>
+        <div>
+          <img
+            class="logo"
+            src="./assets/images/my-logo.png"
+            alt="logo"
+            width="100px"
+          />
         </div>
       </nav>
     </header>
 
     <hr />
     <!----About me section add image of yourself-->
-    <section>
-      <h2>ABOUT ME</h2>
-      <img src="./assets/images/portfolio-pic.jpg" width="20%" />
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod, incidunt
-        in nostrum repellendus eligendi, suscipit magni quidem inventore sunt
-        aperiam ipsa aspernatur ex velit totam aut molestiae hic facere ipsum!
-      </p>
+    <section id="about">
+      <h2 class="relative">ABOUT ME</h2>
+      <div>
+        <img
+          class="center-image"
+          src="./assets/images/portfolio-pic.jpg"
+          alt="image of me"
+        />
+
+        <p class="absolute">
+          HI THERE!! MY NAME IS QADIR KHAN AND I AM TRAINING TO BE A FULL STACK
+          WEB DEVELOPER. CURRENTLY I WORK IN CUSTOMER SERVICE, AND HAVE 8 YEARS
+          WORTH OF EXPERIENCE IN THAT FIELD. I LIKE TO SWIM, TRAVEL AND ALL
+          THINGS ANIMALS.
+        </p>
+      </div>
     </section>
 
     <hr />
 
-    <section>
+    <section id="projects">
       <h2>MY PROJECTS</h2>
     </section>
-    <!----link section with other images lined up should be placeholders about other 7 projects---->
 
-    <section></section>
+    <section>
+      <!-- 7 sections with all future projects -->
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </section>
 
     <hr />
 
     <!----contact me footer-->
-    <footer>
+    <footer id="contact">
       <h3 class="contact-me">CONTACT ME</h3>
       <nav class="nav-container">
-        <div class="nav-link-container">
+        <div class="nav-link-container-1">
           <div class="nav-link-item">
             <a class="nav-link" href="#email">qkhn95@gmail.com</a>
           </div>
           <div class="nav-link-item">
-            <a class="nav-link" href="#number">07978129476</a>
+            <a class="nav-link" href="#number"
+              ><img
+                src="./assets/images/whatsapp-logo.png"
+                alt="whatsapp-logo"
+                width="40px"
+              />07979129476</a
+            >
+          </div>
+          <div class="nav-link-item">
+            <a class="nav-link" href="https://github.com/qkhn95" target="_blank"
+              ><img
+                src="./assets/images/gitlab-logo.jpg"
+                alt="git-lab-link"
+                width="40px"
+              />Gitlab Link</a
+            >
+          </div>
+          <div class="nav-link-item">
+            <a
+              class="nav-link"
+              href="https://www.linkedin.com/in/qadir-khan"
+              target="_blank"
+              ><img
+                src="./assets/images/linkedin-logo.png"
+                alt="linkedin-link"
+                width="40px"
+              />LinkedIn</a
+            >
           </div>
         </div>
       </nav>
