--- a/index.html
+++ b/index.html
@@ -22,14 +22,6 @@
         <div class="nav-link-item">
           <a class="nav-link" href="#contact">Contact Me</a>
         </div>
-        <div>
-          <img
-            class="logo"
-            src="./assets/images/my-logo.png"
-            alt="logo"
-            width="100px"
-          />
-        </div>
       </nav>
     </header>
 
@@ -60,45 +52,52 @@
     </section>
 
     <section>
-      <!-- 7 sections with all future projects -->
       <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
+      <div><!----my portfolio use logo-----></div>
+      <div><!----password generator-----></div>
+      <div><!----.........-----></div>
+      <div><!----...........-----></div>
+      <div><!----...........-----></div>
+      <div><!----........-----></div>
     </section>
 
     <hr />
 
-    <!----contact me footer-->
-    <footer id="contact">
-      <h3 class="contact-me">CONTACT ME</h3>
+    <section id="contact">
+      <h2 class="contact-me">CONTACT ME</h2>
       <nav class="nav-container">
         <div class="nav-link-container-1">
-          <div class="nav-link-item">
-            <a class="nav-link" href="#email">qkhn95@gmail.com</a>
+          <div class="nav-link-item-1">
+            <a class="nav-link" href="mailto:"
+              ><img
+                src="./assets/images/gmail-logo.png"
+                alt="gmail-logo"
+                width="40px"
+                height="40px"
+              />qkhn95@gmail.com</a
+            >
           </div>
-          <div class="nav-link-item">
+          <div class="nav-link-item-1">
             <a class="nav-link" href="#number"
               ><img
                 src="./assets/images/whatsapp-logo.png"
                 alt="whatsapp-logo"
                 width="40px"
+                height="40px"
               />07979129476</a
             >
           </div>
-          <div class="nav-link-item">
+          <div class="nav-link-item-1">
             <a class="nav-link" href="https://github.com/qkhn95" target="_blank"
               ><img
-                src="./assets/images/gitlab-logo.jpg"
+                src="./assets/images/gitlab-logo.png"
                 alt="git-lab-link"
                 width="40px"
-              />Gitlab Link</a
+                height="40px"
+              />Gitlab</a
             >
           </div>
-          <div class="nav-link-item">
+          <div class="nav-link-item-1">
             <a
               class="nav-link"
               href="https://www.linkedin.com/in/qadir-khan"
@@ -106,12 +105,28 @@
               ><img
                 src="./assets/images/linkedin-logo.png"
                 alt="linkedin-link"
-                width="40px"
+                width="85px"
+                height="40px"
               />LinkedIn</a
+            >
+          </div>
+          <div class="nav-link-item-1">
+            <!-----RESUME NOT LINKED------>
+            <a
+              class="nav-link"
+              href="https://www.google.co.uk"
+              target="_blank"
+              />RESUME (NOT LINKED)</a
             >
           </div>
         </div>
       </nav>
+    </section>
+
+    <hr />
+
+    <footer>
+      <p class="footer-wording">Made by Qadir Khan</p1>
     </footer>
   </body>
 </html>
