added 1st card with working link

--- a/index.html
+++ b/index.html
@@ -47,19 +47,37 @@
 
     <hr />
 
+  <main>    
+    
     <section id="projects">
-      <h2>MY PROJECTS</h2>
+    <h2>MY PROJECTS</h2>
     </section>
 
-    <section>
-      <div></div>
-      <div><!----my portfolio use logo-----></div>
-      <div><!----password generator-----></div>
-      <div><!----.........-----></div>
-      <div><!----...........-----></div>
-      <div><!----...........-----></div>
-      <div><!----........-----></div>
+    <section class="card-1-container">
+      <a class="nav-link" href="https://qkhn95.github.io/marketing-refactor/" target="_blank">
+      <img src="./assets/images/horiseon-screen.png" alt="Horiseon Project">
+      <div class="centered">MARKETING REFACTOR PROJECT</div></a>
     </section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    
+
+    <!-- <div></div>
+    <div>--my portfolio use logo---</div> -->
+    <!-- <div>--password generator---</div> -->
+    <!-- <div>--.........---</div> -->
+    <!-- <div>--...........---</div> -->
+    <!-- <div>--...........---</div> -->
+    <!-- <div>--........---</div> -->
+
+
+
+  </main>  
+
+
 
     <hr />
 
