--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
     <hr />
 
   <main>    
-    
     <section id="projects">
     <h2>MY PROJECTS</h2>
     </section>
@@ -58,30 +57,45 @@
       <img src="./assets/images/horiseon-screen.png" alt="Horiseon Project">
       <div class="centered">MARKETING REFACTOR PROJECT</div></a>
     </section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    
 
-    <!-- <div></div>
-    <div>--my portfolio use logo---</div> -->
-    <!-- <div>--password generator---</div> -->
-    <!-- <div>--.........---</div> -->
-    <!-- <div>--...........---</div> -->
-    <!-- <div>--...........---</div> -->
-    <!-- <div>--........---</div> -->
+    <section class="card-container">
+      <a class="nav-link" href="https://qkhn95.github.io/marketing-refactor/" target="_blank">
+        <img src="./assets/images/my-portfolio-screen.jpg" alt="My Portfolio">
+        <div class="centered-1">My Portfolio</div></a>
+    </section>
 
+    <section class="card-container">
+      <a class="nav-link" href="https://qkhn95.github.io/marketing-refactor/" target="_blank">
+        <img src="./assets/images/password-generator.png" alt="password-generator">
+        <div class="centered-1">Password Generator</div></a>
+    </section>
 
+    <section class="card-container">
+      <a class="nav-link" href="https://qkhn95.github.io/marketing-refactor/" target="_blank">
+        <img src="./assets/images/code-quiz.jpg" alt="codequiz">
+        <div class="centered-1">Code Quiz</div></a>
+    </section>
 
+    <section class="card-container">
+      <a class="nav-link" href="https://qkhn95.github.io/marketing-refactor/" target="_blank">
+        <img src="./assets/images/day-planner.jpg" alt="day planner">
+        <div class="centered-1">Day Planner</div></a>
+    </section>
+
+    <section class="card-container">
+      <a class="nav-link" href="https://qkhn95.github.io/marketing-refactor/" target="_blank">
+        <img src="./assets/images/weather-dashboard.jpg" alt="weather-dashboard">
+        <div class="centered-1">Weather Dashboard</div></a>
+    </section>
+
+    <section class="card-container">
+      project 1
+    </section>
   </main>  
-
-
 
     <hr />
 
-    <section id="contact">
+   <section id="contact">
       <h2 class="contact-me">CONTACT ME</h2>
       <nav class="nav-container">
         <div class="nav-link-container-1">
@@ -139,12 +153,12 @@
           </div>
         </div>
       </nav>
-    </section>
+   </section>
 
     <hr />
 
-    <footer>
+  <footer>
       <p class="footer-wording">Made by Qadir Khan</p1>
-    </footer>
+  </footer>
   </body>
 </html>
