media query complete, need to sort out flex direction for cards

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
       <div class="centered">MARKETING REFACTOR PROJECT</div></a>
     </section>
 
+  <div class="card-2-container">
     <section class="card-container">
       <a class="nav-link" href="https://qkhn95.github.io/marketing-refactor/" target="_blank">
         <img src="./assets/images/my-portfolio-screen.jpg" alt="My Portfolio">
@@ -89,8 +90,11 @@
     </section>
 
     <section class="card-container">
-      project 1
+      <a class="nav-link" href="https://qkhn95.github.io/marketing-refactor/" target="_blank">
+        <img src="./assets/images/project-1.jpg" alt="project-1">
+        <div class="centered-1">Project 1</div></a>
     </section>
+  </div>
   </main>  
 
     <hr />
