--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <hr />
-    <!----About me section add image of yourself-->
+    <!----About me section with image of myself-->
     <section id="about">
       <h2 class="relative">ABOUT ME</h2>
       <div>
@@ -39,13 +39,15 @@
         <p class="absolute">
           HI THERE!! MY NAME IS QADIR KHAN AND I AM TRAINING TO BE A FULL STACK
           WEB DEVELOPER. CURRENTLY I WORK IN CUSTOMER SERVICE, AND HAVE 8 YEARS
-          WORTH OF EXPERIENCE IN THAT FIELD. I LIKE TO SWIM, TRAVEL AND ALL
-          THINGS ANIMALS.
-        </p>
+          WORTH OF EXPERIENCE IN THAT FIELD. I AM HERE TO SHOW WHAT I HAVE LEARNT
+          IN NCSC FULL STACK WEB DEVELOPMENT COURSE STUDYING AT UNIVERSITY OF
+          BIRMINGHAM</p>
       </div>
     </section>
 
     <hr />
+
+    <!-----Projects section of website-->
 
   <main>    
     <section id="projects">
@@ -54,50 +56,45 @@
 
     <section class="card-1-container">
       <a class="nav-link" href="https://qkhn95.github.io/marketing-refactor/" target="_blank">
-      <img src="./assets/images/horiseon-screen.png" alt="Horiseon Project">
-      <div class="centered">MARKETING REFACTOR PROJECT</div></a>
-    </section>
-
-  <div class="card-2-container">
-    <section class="card-container">
-      <a class="nav-link" href="https://qkhn95.github.io/marketing-refactor/" target="_blank">
-        <img src="./assets/images/my-portfolio-screen.jpg" alt="My Portfolio">
-        <div class="centered-1">My Portfolio</div></a>
+      <img src="./assets/images/horiseon-screen.png" alt="horiseon-project">
+      <div>MARKETING REFACTOR PROJECT</div></a>
     </section>
 
     <section class="card-container">
+      <div>
       <a class="nav-link" href="https://qkhn95.github.io/marketing-refactor/" target="_blank">
-        <img src="./assets/images/password-generator.png" alt="password-generator">
-        <div class="centered-1">Password Generator</div></a>
-    </section>
-
-    <section class="card-container">
-      <a class="nav-link" href="https://qkhn95.github.io/marketing-refactor/" target="_blank">
-        <img src="./assets/images/code-quiz.jpg" alt="codequiz">
-        <div class="centered-1">Code Quiz</div></a>
-    </section>
-
-    <section class="card-container">
-      <a class="nav-link" href="https://qkhn95.github.io/marketing-refactor/" target="_blank">
+        <img src="./assets/images/my-portfolio-screen.jpg" alt="my-portfolio">
+        <div>My Portfolio</div></a>
+      </div>
+      <div>    <a class="nav-link" href="https://qkhn95.github.io/marketing-refactor/" target="_blank">
+        <img src="./assets/images/password-generator.jpg" alt="password-generator">
+        <div>Password Generator</div></a>
+      </div>
+      <div>      <a class="nav-link" href="https://qkhn95.github.io/marketing-refactor/" target="_blank">
+        <img src="./assets/images/code-quiz.jpg" alt="code-quiz">
+        <div>Code Quiz</div></a>
+      </div>
+      <div> <a class="nav-link" href="https://qkhn95.github.io/marketing-refactor/" target="_blank">
         <img src="./assets/images/day-planner.jpg" alt="day planner">
-        <div class="centered-1">Day Planner</div></a>
+        <div>Day Planner</div></a>
+      </div>
+      <div>
+        <a class="nav-link" href="https://qkhn95.github.io/marketing-refactor/" target="_blank">
+          <img src="./assets/images/weather-dashboard.jpg" alt="weather-dashboard">
+          <div>Weather Dashboard</div></a>
+      </div>
+      <div>
+        <a class="nav-link" href="https://qkhn95.github.io/marketing-refactor/" target="_blank">
+          <img src="./assets/images/project-1.jpg" alt="project-1">
+          <div>Project 1</div></a>
+      </div>      
     </section>
-
-    <section class="card-container">
-      <a class="nav-link" href="https://qkhn95.github.io/marketing-refactor/" target="_blank">
-        <img src="./assets/images/weather-dashboard.jpg" alt="weather-dashboard">
-        <div class="centered-1">Weather Dashboard</div></a>
-    </section>
-
-    <section class="card-container">
-      <a class="nav-link" href="https://qkhn95.github.io/marketing-refactor/" target="_blank">
-        <img src="./assets/images/project-1.jpg" alt="project-1">
-        <div class="centered-1">Project 1</div></a>
-    </section>
-  </div>
+  
   </main>  
 
     <hr />
+
+    <!-----Contact me section-->
 
    <section id="contact">
       <h2 class="contact-me">CONTACT ME</h2>
@@ -161,6 +158,8 @@
 
     <hr />
 
+    <!----Footer section-->
+    
   <footer>
       <p class="footer-wording">Made by Qadir Khan</p1>
   </footer>
