--- a/index.html
+++ b/index.html
@@ -58,36 +58,36 @@
       <a class="nav-link" href="https://qkhn95.github.io/marketing-refactor/" target="_blank">
       <img src="./assets/images/horiseon-screen.png" alt="horiseon-project">
       <div>MARKETING REFACTOR PROJECT</div></a>
-    </section>
-
-    <section class="card-container">
-      <div>
+ 
+    <div class="flex-container">
+      <div class="card-container">
       <a class="nav-link" href="https://qkhn95.github.io/marketing-refactor/" target="_blank">
         <img src="./assets/images/my-portfolio-screen.jpg" alt="my-portfolio">
         <div>My Portfolio</div></a>
       </div>
-      <div>    <a class="nav-link" href="https://qkhn95.github.io/marketing-refactor/" target="_blank">
+      <div class="card-container">    <a class="nav-link" href="https://qkhn95.github.io/marketing-refactor/" target="_blank">
         <img src="./assets/images/password-generator.jpg" alt="password-generator">
         <div>Password Generator</div></a>
       </div>
-      <div>      <a class="nav-link" href="https://qkhn95.github.io/marketing-refactor/" target="_blank">
+      <div class="card-container">      <a class="nav-link" href="https://qkhn95.github.io/marketing-refactor/" target="_blank">
         <img src="./assets/images/code-quiz.jpg" alt="code-quiz">
         <div>Code Quiz</div></a>
       </div>
-      <div> <a class="nav-link" href="https://qkhn95.github.io/marketing-refactor/" target="_blank">
+      <div class="card-container"> <a class="nav-link" href="https://qkhn95.github.io/marketing-refactor/" target="_blank">
         <img src="./assets/images/day-planner.jpg" alt="day planner">
         <div>Day Planner</div></a>
       </div>
-      <div>
+      <div class="card-container">
         <a class="nav-link" href="https://qkhn95.github.io/marketing-refactor/" target="_blank">
           <img src="./assets/images/weather-dashboard.jpg" alt="weather-dashboard">
           <div>Weather Dashboard</div></a>
       </div>
-      <div>
+      <div class="card-container">
         <a class="nav-link" href="https://qkhn95.github.io/marketing-refactor/" target="_blank">
           <img src="./assets/images/project-1.jpg" alt="project-1">
           <div>Project 1</div></a>
-      </div>      
+      </div> 
+    </div>     
     </section>
   
   </main>  
@@ -149,7 +149,7 @@
               class="nav-link"
               href="https://www.google.co.uk"
               target="_blank"
-              />RESUME (NOT LINKED)</a
+              >RESUME (NOT LINKED)</a
             >
           </div>
         </div>
@@ -159,7 +159,7 @@
     <hr />
 
     <!----Footer section-->
-    
+
   <footer>
       <p class="footer-wording">Made by Qadir Khan</p1>
   </footer>
